[tool.poetry]
name = "tracktime"
version = "0.9.15"
description = "Time tracking library with command line interface."
authors = ["Sumner Evans <me@sumnerevans.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"
tabulate = "^0.8.7"
pdfkit = "^0.6.1"
docutils = "^0.16"
requests = "^2.24.0"
pyyaml = "^5.3.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
mypy = "^0.782"
flake8-pep3101 = "^1.3.0"
pytest = "^6.0.1"
pytest-cov = "^2.10.1"
docutils = "^0.16"
jedi = "^0.17.2"
rope = "^0.17.0"
yapf = "^0.30.0"
rst2html5 = "^1.10.6"
termcolor = "^1.1.0"
black = "^20.8b1"
selenium = "^3.141.0"
twine = "^3.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
