[tool.poetry]
name = "tracktime"
version = "0.9.17"
description = "Time tracking library with command line interface."
authors = ["Sumner Evans <inquiries@sumnerevans.com>"]
license = "GPL-3.0-or-later"
readme = "README.rst"
repository = "https://git.sr.ht/~sumner/tracktime"
keywords = ["time", "tracking"]
classifiers = [
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 4 - Beta",

    # Indicate who your project is intended for
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX",
]

[tool.poetry.scripts]
tt = "tracktime.__main__:main"

[tool.poetry.urls]
"Bug Tracker" = "https://todo.sr.ht/~sumner/tracktime"

[tool.poetry.dependencies]
python = "^3.7"
docutils = "^0.16"
pdfkit = "^0.6.1"
pyyaml = "^5.3.1"
requests = "^2.24.0"
tabulate = "^0.8.7"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
docutils = "^0.16"
flake8 = "^3.8.3"
flake8-pep3101 = "^1.3.0"
jedi = "^0.17.2"
mypy = "^0.782"
pytest = "^6.0.1"
pytest-cov = "^2.10.1"
rope = "^0.17.0"
rst2html5 = "^1.10.6"
selenium = "^3.141.0"
termcolor = "^1.1.0"
yapf = "^0.30.0"

[tool.pytest.ini_options]
addopts = """
    -vvv
    --doctest-modules
    --ignore-glob='examples/*'
    --ignore-glob='cicd/*'
    --cov=tracktime
    --cov-report html
    --cov-report term
"""

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
